data/derived/fa15/progs/unify/prog2288.ml.out
Characters 149-175:
  let (_, res) = List.fold_left f base args in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a * 'b
